--- a/styles.css
+++ b/styles.css
@@ -67,27 +67,26 @@ body {
 }
 
 @media (max-width: 600px) {
-  .navbar {
-      flex-direction: column-reverse;
-      align-items: flex-start;
-  }
-
   .toggle-button {
-      display: flex;
+    display: flex;
+}
+
+  .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+      width: 100%;
   }
 
   .navbar-links {
-      display: none;
       width: 100%;
   }
 
   .navbar-links ul {
       width: 100%;
-      flex-direction: column;
-      align-items:flex-start;
+      flex-direction:column
   }
 
-  .navbar-links ul li {
+  .navbar-links li {
       text-align: center;
   }
 
